# AlloAudio

./: CMakeLists.txt  README.md  alloaudio.c  alloaudio.h  autoconnector.c  autoconnector.h  butter.c  butter.h  firfilter.c  firfilter.h  main.c  osc_control.c  osc_control.h
interfaces/: alloaudio-bass.htm  alloaudio-main.htm  alloaudio-meters.htm
